# xsens_mtw_wrapper

./: .clang-format  .cmake-format.py  CMakeLists.txt  README.md  package.xml
cmake/: FindXsens.cmake
config/: sensor_labels.yaml  sync_settings.yaml
include/xsens_mtw/: MtwCallback.h  Synchronizer.h  WirelessMasterCallback.h  Wrapper.h  XsensMtw.h  utils.h
launch/: custom_configuration_example.launch  default.launch  hiros_xsens_mtw_wrapper_default.launch
msg/: MIMU.msg  MIMUArray.msg
src/: MtwCallback.cpp  Synchronizer.cpp  WirelessMasterCallback.cpp  Wrapper.cpp  XsensMtw.cpp  main.cpp  utils.cpp
srv/: ResetOrientation.srv
