<?xml version="1.0"?>
<package format="2">
  <name>hiros_xsens_mtw_wrapper</name>
  <version>0.1.0</version>
  <description>Hi-ROS mantained xsens_mtw_wrapper package</description>
  <maintainer email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</maintainer>
  <maintainer email="luca.tagliapietra@unipd.it">Luca Tagliapietra</maintainer>
  <license>TODO</license>

  <url type="website">https://gitlab.com/hi-ros</url>
  <author email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</author>
  <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
